src/objects/ACSFUL001__Product_Part__c.object
<CustomObject>
    <fields>
        <fullName>ACSFUL001__Child_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>ACSFUL001__Product__c</referenceTo>
        <relationshipLabel>Product Parts (Child Product)</relationshipLabel>
        <relationshipName>Child_Product_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Parent_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>ACSFUL001__Product__c</referenceTo>
        <relationshipLabel>Product Parts</relationshipLabel>
        <relationshipName>Product_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Quantity__c</fullName>
        <description>Describes how often the child product is included in the parent product.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACSFUL001__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Alternative_Description__c</fullName>
        <description>To display the same value as in the Child product object with Des1_ Language_1</description>
        <formula>ACSFUL001__Child_Product__r.ACSFUL001__Description_1_Language_1__c</formula>
        <label>Alternative Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_CU_Quantity__c</fullName>
        <label>CU Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Product_Code__c</fullName>
        <description>Product code of the child product record</description>
        <formula>ACSFUL001__Child_Product__r.ACSFUL001__Product_Code__c</formula>
        <inlineHelpText>Product code of the child product record</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <label>Product Part</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Product Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACSFUL001__Same_Product_Added</fullName>
        <active>true</active>
        <description>This validation rule checks that the same product is not added as parent and child</description>
        <errorConditionFormula>ACSFUL001__Child_Product__c =  ACSFUL001__Parent_Product__c</errorConditionFormula>
        <errorMessage>Parent and Child Product cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACSFUL001__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>This validates that Valid From cannot be greater than Valid Thru</description>
        <errorConditionFormula>ACSFUL001__Valid_From__c &gt; ACSFUL001__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From cannot be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>